--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,11 @@
 @layer base {
   html, body {
     font-family: 'Noto Sans SC', sans-serif;
-    @apply bg-gray-100 text-gray-800 transition-colors duration-500;
+    @apply bg-white dark:bg-brand-primary text-gray-800 dark:text-gray-300 transition-colors duration-500;
     overscroll-behavior: none;
   }
 
   html.dark, html.dark body {
-    @apply bg-brand-primary text-gray-300;
     background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 800 800' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
   }
 
